# hello-cmake-qt-github_action

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
